test/invalid_syntax_error.spt
R"*(
<HTML>
  /DIV> 
    Missing open angle bracket
  </DIV>
</HTML>
)*"_html; 